--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			content="Discord-Moderation simplify creating moderation system to your Discord Bot."
 		/>
 
-		<meta property="og:title" content="Discord.js" />
+		<meta property="og:title" content="Discord-Moderation" />
 		<meta
 			property="og:description"
 			content="Discord-Moderation simplify creating moderation system to your Discord Bot."
@@ -25,6 +25,7 @@
 	  <script type="module" crossorigin src="/assets/index.91123aec.js"></script>
     <link rel="modulepreload" href="/assets/vendor.8173c927.js">
     <link rel="stylesheet" href="/assets/index.db49b038.css">
+  <link rel="manifest" href="/manifest.webmanifest"></head>
 	<body>
 		<noscript>
 			<strong
