--- a/docs.html
+++ b/docs.html
@@ -3,25 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-		<meta name="apple-mobile-web-app-title" content="Discord.js Docs">
-		<meta name="application-name" content="Discord-Moderation Docs">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#090a16">
+		<meta name="apple-mobile-web-app-title" content="discord-moderation Docs">
+		<meta name="application-name" content="discord-moderation Docs">
 		<meta name="msapplication-TileColor" content="#090a16">
 		<meta name="theme-color" content="#090a16">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>discord-moderation</title>
 		<meta
 			name="description"
-			content="Discord-Moderation simplify creating moderation system to your Discord Bot."
+			content="discord-moderation will simplify creating moderation system to your discord bot."
 		/>
 
-		<meta property="og:title" content="Discord.js" />
+		<meta property="og:title" content="DiscordJS Economy" />
 		<meta
 			property="og:description"
-			content="Discord-Moderation simplify creating moderation system to your Discord Bot."
+			content="discord-moderation will simplify creating moderation system to your discord bot."
 		/>
-		<meta property="og:image" content="https://discord-moderation.js.org/static/dm_logo.png" />
-		<meta http-equiv="refresh" content="0; url=https://discord-moderation.js.org/#/docs">
+		<meta http-equiv="refresh" content="0; url=https://djs-economy.js.org/#/docs">
 	</head>
 </html>
