--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<noscript>
 			<strong
-				>Sorry, but the DiscordJS-Economy website doesn't work properly without JavaScript enabled. Please enable it to
+				>Sorry, but the discord-moderation website doesn't work properly without JavaScript enabled. Please enable it to
 				continue.</strong
 			>
 		</noscript>
